<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/receipt"
        android:layout_width="118dp"
        android:layout_height="159dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/receipt"
        android:contentDescription="TODO" />

    <!-- this text view causes the crashes -->
    <!-- android:layout_below="@id/receipt" maybe not be correct-->
    <TextView
        android:id="@+id/textView"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textColor="@color/rebeccaPurple"
        android:layout_below="@id/receipt"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:background="@color/white"
        android:ems="10"
        android:hint="Username"
        android:gravity="center"
        android:textColorHint="@color/rebeccaPurple"
        android:inputType="textCapWords"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/userName"
        android:layout_marginTop="24sp"
        android:layout_alignLeft="@id/userName"
        android:layout_alignStart="@id/userName"
        android:hint="Password"
        android:gravity="center"
        android:ems="10"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="@color/white"
        android:textColorHint="@color/rebeccaPurple"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:background="@color/rebeccaPurple"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btn_signUp"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/signUp"
        android:layout_below="@id/btn_logIn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/rebeccaPurple"
        android:textSize="16sp" />

</RelativeLayout>