<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/greetingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:fontFamily="sans-serif-medium"
            android:text="Hello! "
            android:textColor="@color/purple"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvHelloUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/purple"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sales_and_purchases"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_insert_drive"
        android:fontFamily="sans-serif-medium"
        android:text="@string/inventory_list"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPOSMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_menu"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pos_menu"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnKeeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_assistant"
        android:fontFamily="sans-serif-medium"
        android:text="Sales receipt keeper"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>