<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/receipt"
        android:layout_width="118dp"
        android:layout_height="159dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/receipt" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/receipt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textColor="@color/purple"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="Username"
        android:inputType="textCapWords"
        android:textColorHint="@color/purple"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/etUsername"
        android:layout_alignStart="@id/etUsername"
        android:layout_alignLeft="@id/etUsername"
        android:layout_marginTop="24sp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/etPassword"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@color/purple"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/signUp"
        android:textColor="@color/purple"
        android:textSize="16sp" />

</RelativeLayout>